--- a/package.json
+++ b/package.json
@@ -13,19 +13,20 @@
     "appId": "com.example.app"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^11.0.0",
-    "@rollup/plugin-node-resolve": "^7.0.0",
-    "electron": "^8.0.1",
-    "electron-builder": "^22.3.2",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
+    "electron": "^13.0.1",
+    "electron-builder": "^22.10.5",
     "electron-reload": "^1.5.0",
-    "rollup": "^1.20.0",
-    "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.19.1"
+    "rollup": "^2.50.1",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "svelte": "^3.38.2"
   },
   "dependencies": {
     "cross-env": "^7.0.0",
-    "sirv-cli": "^0.4.4"
+    "sirv-cli": "^1.0.0"
   }
 }
